Closed
Bug 1503666
Opened 6 years ago
Closed 6 years ago
Intermittent GECKO(5948) | Assertion failure: JS::ObjectIsNotGray(target), at z:/build/build/src/js/src/proxy/Wrapper.cpp:353
Categories
(Core :: JavaScript Engine, defect, P5)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla65
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox63 | --- | unaffected |
firefox64 | --- | unaffected |
firefox65 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jonco)
References
Details
(Keywords: assertion, intermittent-failure)
Attachments
(1 file)
1.91 KB,
patch
|
sfink
:
review+
|
Details | Diff | Splinter Review |
Filed by: cbrindusan [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=208956694&repo=mozilla-central
https://queue.taskcluster.net/v1/task/euHphWJJQXuakRcJKIWvFw/runs/0/artifacts/public/logs/live_backing.log
18:08:53 INFO - TEST-START | dom/media/tests/mochitest/test_peerConnection_checkPacketDumpHook.html
18:08:53 INFO - GECKO(5948) | Assertion failure: JS::ObjectIsNotGray(target), at z:/build/build/src/js/src/proxy/Wrapper.cpp:353
18:08:53 INFO - GECKO(5948) | ###!!! [Parent][MessageChannel] Error: (msgtype=0x190095,name=PBrowser::Msg_UpdateNativeWindowHandle) Channel error: cannot send/recv
18:08:53 INFO - GECKO(5948) | ###!!! [Parent][MessageChannel] Error: (msgtype=0x190084,name=PBrowser::Msg_Destroy) Channel error: cannot send/recv
18:08:53 INFO - GECKO(5948) | ++DOCSHELL 115F4000 == 8 [pid = 5988] [id = {fcb42168-2427-422b-87c2-eec7da78a4b6}]
18:08:53 INFO - GECKO(5948) | ++DOMWINDOW == 17 (0B259410) [pid = 5988] [serial = 40] [outer = 00000000]
18:08:53 INFO - GECKO(5948) | ++DOMWINDOW == 18 (16AAB800) [pid = 5988] [serial = 41] [outer = 0B259410]
18:08:53 INFO - GECKO(5948) | A content process crashed and MOZ_CRASHREPORTER_SHUTDOWN is set, shutting down
18:08:53 INFO - GECKO(5948) | ++DOMWINDOW == 19 (0DB55800) [pid = 5988] [serial = 42] [outer = 0B259410]
18:08:53 INFO - GECKO(5948) | [Parent 5988, Gecko_IOThread] WARNING: file z:/build/build/src/ipc/chromium/src/base/process_util_win.cc, line 188
18:08:53 INFO - GECKO(5948) | [Child 4068, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
18:08:53 INFO - GECKO(5948) | [Child 4068, Chrome_ChildThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
18:08:53 INFO - GECKO(5948) | [Parent 5988, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
18:08:53 INFO - GECKO(5948) | [Parent 5988, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
18:08:53 INFO - GECKO(5948) | [Parent 5988, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
18:08:53 INFO - GECKO(5948) | [Parent 5988, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
18:08:53 INFO - GECKO(5948) | [Child 4068, Main Thread] WARNING: NS_ENSURE_TRUE(maybeContext) failed: file z:/build/build/src/xpcom/threads/nsThread.cpp, line 948
18:08:53 INFO - GECKO(5948) | [Parent 5988, Gecko_IOThread] WARNING: pipe error: 109: file z:/build/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346
18:08:53 INFO - GECKO(5948) | --DOCSHELL 083E3400 == 3 [pid = 4068] [id = {4775bc27-6d2e-4833-b999-bc3635193499}]
18:08:53 INFO - GECKO(5948) | --DOCSHELL 0136B800 == 2 [pid = 4068] [id = {4697af44-771b-4186-a585-c2d1d6672f69}]
18:08:53 INFO - GECKO(5948) | --DOCSHELL 0136AC00 == 1 [pid = 4068] [id = {b6b8020c-f0a4-4b15-adca-06ff1176b56e}]
18:08:53 INFO - GECKO(5948) | --DOCSHELL 01365400 == 0 [pid = 4068] [id = {97c697eb-7a0a-4290-a13b-3e60610a2b84}]
18:08:53 INFO - GECKO(5948) | --DOMWINDOW == 7 (08339410) [pid = 4068] [serial = 1] [outer = 00000000] [url = moz-extension://6d54dec3-7c7f-4448-b5c0-be0441e959b1/_generated_background_page.html]
18:08:53 INFO - GECKO(5948) | [Child 4068, Main Thread] WARNING: '!mMainThread', file z:/build/build/src/xpcom/threads/nsThreadManager.cpp, line 510
18:08:53 INFO - GECKO(5948) | [Child 4068, Main Thread] WARNING: '!mMainThread', file z:/build/build/src/xpcom/threads/nsThreadManager.cpp, line 510
18:08:53 INFO - GECKO(5948) | [Child 4068, Main Thread] WARNING: '!mMainThread', file z:/build/build/src/xpcom/threads/nsThreadManager.cpp, line 510
18:08:53 INFO - GECKO(5948) | [Child 4068, Main Thread] WARNING: '!mMainThread', file z:/build/build/src/xpcom/threads/nsThreadManager.cpp, line 510
18:08:53 INFO - GECKO(5948) | [Child 4068, Main Thread] WARNING: '!mMainThread', file z:/build/build/src/xpcom/threads/nsThreadManager.cpp, line 510
18:08:53 INFO - GECKO(5948) | [Child 4068, Main Thread] WARNING: '!mMainThread', file z:/build/build/src/xpcom/threads/nsThreadManager.cpp, line 510
18:08:53 INFO - GECKO(5948) | [Child 4068, Main Thread] WARNING: '!mMainThread', file z:/build/build/src/xpcom/threads/nsThreadManager.cpp, line 510
18:08:53 INFO - GECKO(5948) | [Child 4068, Main Thread] WARNING: '!mMainThread', file z:/build/build/src/xpcom/threads/nsThreadManager.cpp, line 510
18:08:53 INFO - GECKO(5948) | [Child 4068, Main Thread] WARNING: '!mMainThread', file z:/build/build/src/xpcom/threads/nsThreadManager.cpp, line 510
Comment hidden (Intermittent Failures Robot) |
Comment 2•6 years ago
|
||
Hi Jon, this popped up after bug 1502946 landed. Can you take a look at it, please?
Component: WebRTC → JavaScript Engine
See Also: → 1502946
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → jcoppeard
Assignee | ||
Comment 4•6 years ago
|
||
This assertion that's failing relies on the old behaviour of ObjectIsNotGray().
The patch fixes the assertion to only happen if we are not in an incremental GC and updates the comments to hopefully be clearer about what's going on.
Attachment #9022129 -
Flags: review?(sphink)
Updated•6 years ago
|
Attachment #9022129 -
Flags: review?(sphink) → review+
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/b7296906b534
Fix gray marking assertion in Wrapper::wrappedObject and update comments r=sfink
Comment hidden (Intermittent Failures Robot) |
Comment 7•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment hidden (Intermittent Failures Robot) |
Updated•6 years ago
|
status-firefox63:
--- → unaffected
status-firefox64:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Keywords: assertion
You need to log in
before you can comment on or make changes to this bug.
Description
•