Bug 1503666 - Fix gray marking assertion in Wrapper::wrappedObject and update comments r=sfink